feat: adopt new chain
